--- a/index.html
+++ b/index.html
@@ -126,7 +126,18 @@
 </body>
 
 
-
+<footer>
+    <div class="footer-logo">Sandwich</div>
+    <div class="container"></div>
+        <div class="kontak-list">
+            <ul> 
+                <li>No telpon: +6221789640</li>
+                <li>Email: sandwichenak@gmail.com</li>
+                <li>Instagram: @sandwitchnih</li>
+            </ul>
+        </div>
+    </div>
+  </footer>
 
 
 
