--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Link Stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="query.css">
     <title> Sandwich kelas E17</title>
 
 </head>
