--- a/index.html
+++ b/index.html
@@ -235,7 +235,39 @@
   
 
 
-
+  <div class="nama-lokasi">
+    <h2>Lokasi Kami</h2>
+  </div>
+  <div class="lokasi">
+    <div class="Lokasi-1">
+      <img class="tempat" src="./aset/bandung.jpg" alt="Bandung">
+      <h3>Bandung</h3>
+      <a href="tel:123-456-7890" style="color:#fff;">123-456-7890</a>
+      <h4>jl.Cibiru - Soekaro hatta no.101 samping Mcd</h4>
+      <!-- <img class="star"  src="./aset/sandwich1.jpg" alt="bintang 5"> -->
+      <p class="p-lok">Gunakan Maps untuk mendapatkan Rute Jalan</p>
+      <a href="#"><button>Klik Di sini</button></a>
+    </div>
+    <div class="Lokasi-1">
+      <img class="tempat" src="./aset/Skyline-Jakarta.jpg" alt="Jakarta">
+      <h3>Jakarta</h3>
+      <a href="tel:123-456-7890" style="color:#fff;">123-456-7890</a>
+      <h4>Jakarta jl.martadinata no.45</h4>
+      <!-- <img class="star"  src="./aset/sandwich1.jpg" alt="bintang 5"> -->
+      <p class="p-lok">Gunakan Maps untuk mendapatkan Rute Jalan</p>
+      <a href="#"><button>Klik Di sini</button></a>
+    </div>
+    <div class="Lokasi-1">
+      <img class="tempat" src="./aset/surabaya.jpg" alt="Surabaya">
+      <h3>Surabaya</h3>
+      <a href="tel:123-456-7890" style="color: #fff;">123-456-7890</a>
+      <h4>Jl.Malioboro no.15</h4>
+      <!-- <img class="star"  src="./aset/sandwich1.jpg" alt="bintang 5"> -->
+      <p class="p-lok">Gunakan Maps untuk mendapatkan Rute Jalan</p>
+      <a href="#"><button>Klik Di sini</button></a>
+    </div>
+  </div>
+</section>
 
 
   <footer>
