--- a/index.html
+++ b/index.html
@@ -196,19 +196,7 @@
             </div>
           </div>
           <div class="box-contain">
-            <div class="profile-box">
-              <div class="profile-image">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg">
-              </div>
-              <figcaption> 
-              <h3>Fleece Marigold</h3>
-              <h4>Founder</h4>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
-              <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"> <i class="fa fa-twitter"></i></a>
-                <a href="#"> <i class="fa fa-facebook"></i></a>
-              </div>
-              </figcaption>
+            <div class="profile-box-dum">
             </div>
           </div>
           <div class="box-contain">
