--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <div class="koki-wrapper">
       <div class="menu-container">
         <div class="menu-heading">
-          <h1>Penasaran dengan Menu Kami?</h1>
-          <h2>Silahkan cek menu-menu kami yang mantap!!</h2>
+          <h1>Koki Kami</h1>
+          
         </div>
         <div class="menus">
           <div class="box-contain">
@@ -182,12 +182,12 @@
           <div class="box-contain">
             <div class="profile-box">
               <div class="profile-image">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg">
+                <img src="./aset/okta.jpg">
               </div>
               <figcaption> 
-              <h3>Fleece Marigold</h3>
-              <h4>Founder</h4>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+              <h3>Oktavianus Eko S S</h3>
+              <h4>Jr. cheff</h4>
+              <p>Pain from studying just temporaly, pain from not studying are permanently</p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
                 <a href="#"> <i class="fa fa-facebook"></i></a>
@@ -219,7 +219,7 @@
           
         </div>
     </div>
-  </div>
+  
   
 
 
@@ -227,7 +227,7 @@
     <h2>Lokasi Kami</h2>
   </div>
   <div class="lokasi">
-    <div class="Lokasi-1">
+    <div class="lokasi-1">
       <img class="tempat" src="./aset/bandung.jpg" alt="Bandung">
       <h3>Bandung</h3>
       <a href="tel:123-456-7890" style="color:#fff;">123-456-7890</a>
@@ -236,7 +236,7 @@
       <p class="p-lok">Gunakan Maps untuk mendapatkan Rute Jalan</p>
       <a href="#"><button>Klik Di sini</button></a>
     </div>
-    <div class="Lokasi-1">
+    <div class="lokasi-1">
       <img class="tempat" src="./aset/Skyline-Jakarta.jpg" alt="Jakarta">
       <h3>Jakarta</h3>
       <a href="tel:123-456-7890" style="color:#fff;">123-456-7890</a>
@@ -245,7 +245,7 @@
       <p class="p-lok">Gunakan Maps untuk mendapatkan Rute Jalan</p>
       <a href="#"><button>Klik Di sini</button></a>
     </div>
-    <div class="Lokasi-1">
+    <div class="lokasi-1">
       <img class="tempat" src="./aset/surabaya.jpg" alt="Surabaya">
       <h3>Surabaya</h3>
       <a href="tel:123-456-7890" style="color: #fff;">123-456-7890</a>
@@ -256,7 +256,7 @@
     </div>
   </div>
 </section>
-
+</div>
 
   <footer>
       <div class="container">
