--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Link Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="query.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title> Sandwich kelas E17</title>
 
 </head>
