--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
           <div class="box-contain">
             <div class="profile-box">
               <div class="profile-image">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg">
+                <img src="./aset/maman.jpg">
               </div>
               <figcaption> 
-              <h3>Fleece Marigold</h3>
-              <h4>Founder</h4>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+              <h3>Maman Mansyur</h3>
+              <h4>Founder and Owner</h4>
+              <p>Do it yourself, don't ever rely on others. </p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
                 <a href="#"> <i class="fa fa-facebook"></i></a>
@@ -150,12 +150,12 @@
           <div class="box-contain">
             <div class="profile-box">
               <div class="profile-image">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg">
+                <img src="./aset/yoyo.jpeg">
               </div>
               <figcaption> 
-              <h3>Fleece Marigold</h3>
-              <h4>Founder</h4>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+              <h3>Yoyo Ariss</h3>
+              <h4>Sr. Cheff</h4>
+              <p>Atitude,  mindset  and  <br>contents</br></p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
                 <a href="#"> <i class="fa fa-facebook"></i></a>
