--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <figcaption> 
               <h3>Maman Mansyur</h3>
               <h4>Founder and Owner</h4>
-              <p>Do it yourself, don't ever rely on others. </p>
+              <p>Do it yourself, don't ever rely on others.<br> </br> </p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
                 <a href="#"> <i class="fa fa-facebook"></i></a>
@@ -155,7 +155,7 @@
               <figcaption> 
               <h3>Yoyo Ariss</h3>
               <h4>Sr. Cheff</h4>
-              <p>Atitude,  mindset  and  <br>contents</br></p>
+              <p>Atitude,  mindset  and  <br>contents<br></br></p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
                 <a href="#"> <i class="fa fa-facebook"></i></a>
@@ -166,12 +166,12 @@
           <div class="box-contain">
             <div class="profile-box">
               <div class="profile-image">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg">
+                <img src="./aset/siswo.jpeg">
               </div>
               <figcaption> 
-              <h3>Fleece Marigold</h3>
-              <h4>Founder</h4>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+              <h3>Siswo Marhayudi</h3>
+              <h4>Sr. Cheff</h4>
+              <p>Lego Ergo Scio <br>“Saya Baca Maka Saya Tahu"<br></br></p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
                 <a href="#"> <i class="fa fa-facebook"></i></a>
