--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               </div>
               <figcaption> 
               <h3>Oktavianus Eko S S</h3>
-              <h4>Jr. cheff</h4>
+              <h4>Jr. Cheff</h4>
               <p>Pain from studying just temporaly, pain from not studying are permanently</p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
@@ -203,12 +203,12 @@
           <div class="box-contain">
             <div class="profile-box">
               <div class="profile-image">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg">
+                <img src="./aset/kenninja.jpg">
               </div>
               <figcaption> 
-              <h3>mmmmmmmmmmmmmm</h3>
-              <h4>Founder</h4>
-              <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
+              <h3>Arfian Cahya</h3>
+              <h4>Jr. Cheff</h4>
+              <p>Silent is gold and thinking are diamond<br></br></p>
               <div class="icons"><a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"> <i class="fa fa-twitter"></i></a>
                 <a href="#"> <i class="fa fa-facebook"></i></a>
